Disable Nix in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,14 @@ before_install:
 
 install:
   # Build dependencies
-  - stack -j2 --no-terminal --install-ghc test --only-dependencies
+  - stack --no-nix -j2 --no-terminal --install-ghc test --only-dependencies
 
 script:
   # Build the package, its tests, and its docs and run the tests
-  - stack -j2 --no-terminal test --haddock --no-haddock-deps --coverage
+  - stack --no-nix -j2 --no-terminal test --haddock --no-haddock-deps --coverage
 
 after_script:
   # Collect and submit coverage information
-  # - stack install stack-hpc-coveralls
+  # - stack --no-nix install stack-hpc-coveralls
   - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar -xj
   - ./shc wavetoy1 wavetoy1-test-suite
