--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,8 @@
 # Use new container infrastructure to enable caching
 sudo: false
 
-# Do not choose a language; we provide our own build tools.
-language: generic
-
-# Caching so the next build will be fast too.
-cache:
-  directories:
-    - $HOME/.stack
+# Enable Nix
+language: nix
 
 # Ensure necessary system libraries are present
 addons:
@@ -20,10 +15,15 @@ addons:
     packages:
       - libgmp-dev
 
+# Caching so the next build will be fast too.
+cache:
+  directories:
+    - $HOME/.stack
+
 before_install:
   # Download and unpack the stack executable
   - mkdir -p ~/.local/bin
-  - export PATH=$HOME/.local/bin:$PATH
+  - export "PATH=$HOME/.local/bin:$PATH"
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
 install:
@@ -31,7 +31,7 @@ install:
   - stack --no-nix -j2 --no-terminal --install-ghc test --only-dependencies
 
 script:
-  # Build the package, its tests, and its docs and run the tests
+  # Build the package, its tests, and its docs, and run the tests
   - stack --no-nix -j2 --no-terminal test --haddock --no-haddock-deps --coverage
 
 after_script:
