Install shc earlier

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ cache:
 
 before_install:
   # Download and unpack the stack executable
-  - mkdir -p ~/.local/bin
+  - mkdir -p "$HOME/.local/bin"
   - export "PATH=$HOME/.local/bin:$PATH"
-  - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C "$HOME/.local/bin" '*/stack'
+  - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar xj -C "$HOME/.local/bin"
 
 install:
   # Build dependencies
@@ -37,5 +38,6 @@ script:
 after_script:
   # Collect and submit coverage information
   # - stack install stack-hpc-coveralls
-  - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar -xj
-  - ./shc wavetoy1 wavetoy1-test-suite
+  # - travis_retry curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar -xj
+  # - ./shc wavetoy1 wavetoy1-test-suite
+  - shc wavetoy1 wavetoy1-test-suite
