--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,20 @@ jobs:
             curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar xj -C "$HOME/.local/bin"
       # Build dependencies
       - run:
-          stack -j2 --no-terminal --install-ghc test --only-dependencies
-#       # Build the package, its tests, and its docs, and run the
-#       # tests
-#       - run:
-#           command: |
-#             stack -j2 --no-terminal test --haddock --no-haddock-deps --coverage
-#       # Collect and submit coverage information
-#       - run:
-#           command: |
-#             shc wavetoy1 wavetoy1-test-suite
+          commmand: |
+            export "PATH=$HOME/.local/bin:$PATH"
+            stack -j2 --no-terminal --install-ghc test --only-dependencies
+      # Build the package, its tests, and its docs, and run the
+      # tests
+      - run:
+          command: |
+            export "PATH=$HOME/.local/bin:$PATH"
+            stack -j2 --no-terminal test --haddock --no-haddock-deps --coverage
+      # Collect and submit coverage information
+      - run:
+          command: |
+            export "PATH=$HOME/.local/bin:$PATH"
+            shc wavetoy1 wavetoy1-test-suite
     
 #   cache_directories:
 #     - "~/.stack"
