--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,26 +5,25 @@ jobs:
       - image: buildpack-deps:trusty
     steps:
       - checkout
-      # Download and unpack the stack executable
       - run:
+          name: Download and unpack the stack executable
           command: |
             mkdir -p "$HOME/.local/bin"
             export "PATH=$HOME/.local/bin:$PATH"
             curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C "$HOME/.local/bin" '*/stack'
             curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar xj -C "$HOME/.local/bin"
-      # Build dependencies
       - run:
-          commmand: |
+          name: Build dependencies
+          command: |
             export "PATH=$HOME/.local/bin:$PATH"
             stack -j2 --no-terminal --install-ghc test --only-dependencies
-      # Build the package, its tests, and its docs, and run the
-      # tests
       - run:
+          name: Build the package, its tests, and its docs, and run the tests
           command: |
             export "PATH=$HOME/.local/bin:$PATH"
             stack -j2 --no-terminal test --haddock --no-haddock-deps --coverage
-      # Collect and submit coverage information
       - run:
+          name: Collect and submit coverage information
           command: |
             export "PATH=$HOME/.local/bin:$PATH"
             shc wavetoy1 wavetoy1-test-suite
