--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
             export "PATH=$HOME/.local/bin:$PATH"
             curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C "$HOME/.local/bin" '*/stack'
             curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar xj -C "$HOME/.local/bin"
+      - restore_cache:
+          key: stack
       - run:
           name: Build dependencies
           command: |
@@ -24,11 +26,12 @@ jobs:
           command: |
             export "PATH=$HOME/.local/bin:$PATH"
             stack -j2 --no-nix --no-terminal test --haddock --no-haddock-deps --coverage
-      - run:
-          name: Collect and submit coverage information
-          command: |
-            export "PATH=$HOME/.local/bin:$PATH"
-            shc wavetoy1 wavetoy1-test-suite
-    
-#   cache_directories:
-#     - "~/.stack"
+      - save_cache:
+          key: stack
+          paths:
+            - "$HOME/.stack"
+      # - run:
+      #     name: Collect and submit coverage information
+      #     command: |
+      #       export "PATH=$HOME/.local/bin:$PATH"
+      #       shc wavetoy1 wavetoy1-test-suite
