--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C "$HOME/.local/bin" '*/stack'
             curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.4.0/shc-linux-x64-8.0.1.tar.bz2 | tar xj -C "$HOME/.local/bin"
       - restore_cache:
-          key: stack
+          key: stack-v2
       - run:
           name: Build dependencies
           command: |
@@ -27,7 +27,7 @@ jobs:
             export "PATH=$HOME/.local/bin:$PATH"
             stack -j2 --no-nix --no-terminal test --haddock --no-haddock-deps --coverage
       - save_cache:
-          key: stack
+          key: stack-v2
           paths:
             - ~/.stack
       # TODO: shc calls stack without the "--no-nix" option, which fails
