--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@
 # Use new container infrastructure to enable caching
 sudo: false
 
-# Enable Nix
-language: nix
+# Do not choose a language; we provide our own build tools.
+language: generic
+# # Enable Nix
+# language: nix
 
 # Ensure necessary system libraries are present
 addons:
